--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,22 @@
-# Binaries for programs and plugins
+# Binaries and libraries
 *.exe
-*.exe~
 *.dll
 *.so
 *.dylib
 
+# Temporary and backup files
+*~
 .vscode
 .devcontainer
 
-# Test binary, built with `go test -c`
+# Test binary
 *.test
 
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
+# Build output
+bin
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
+# Coverage files
+*.out
 
 # Go workspace file
 go.work
